<resources>
    <string name="fragment_route_info_distance_label">Расстояние</string>
    <string name="fragment_route_info_travel_mode_label">Транспорт</string>
    <string name="fragment_route_info_travel_mode_value">Пешком</string>
    <string name="fragment_route_info_duration_label">Время</string>
    <string name="fragment_route_info_points_label">Объектов</string>
    <string name="fragment_route_info_photos_label">Фото достопримечательностей</string>
    <string name="fragment_route_info_description_label">Коротко про…</string>
    <string name="fragment_route_info_button_text">Пройтись по маршруту</string>

    <string name="empty"></string>

    <string name="city_items_show">▶ В путь</string>
    <string name="point_item_info_show">▶ Пройтись</string>
    <string name="show_more_button_text">Подробнее</string>

    <string name="restore_screen_title">Восстановление покупок</string>
    <string name="contacts_mail_link_pattern" translatable="false">mailto: %1$s</string>
    <string name="contacts_select_mail">Выберите приложение</string>
    <string name="application_not_found">Нет подходящего приложения</string>
    <string name="restore_screen_copy_id_description">1. Нажмите на кнопку «Скопировать UID» ниже, чтобы скопировать ID вашего устройства.</string>
    <string name="restore_screen_copy_id">Скопировать UID</string>
    <string name="restore_screen_copy_id_contacts">2. Для восстановления покупок обратитесь к нам по email: pixel.rabbit.soft@gmail.com. В письме укажите ваш UID, дату и время осуществления покупок маршрутов. Мы проверим вашу информацию и восстановим доступ.</string>
    <string name="restore_screen_send_mail">Отправить</string>
    <string name="restore_screen_sync_description">3. После проверки, мы сообщим вам по почте о готовности к восстановлению покупок. Чтобы обновить информацию на вашем текущем устройстве, необходимо будет нажать кнопку «Обновить данные» ниже. Мы сообщим, когда это сделать, не стоит нажимать на неё до завершения проверки.</string>
    <string name="restore_screen_sync_remote_data">Обновить данные</string>
    <string name="restore_screen_restore_success_with_changes">Данные обновлены. Попробуйте перезапустить приложение😉</string>
    <string name="restore_screen_restore_success">Данные актуальны. Свяжитесь с нами, если что-то не так</string>
    <string name="restore_screen_restore_error">К сожалению, что-то пошло не так. Пожалуйста, попробуйте снова</string>

    <string name="payments_screen_title">Оформление экскурсии</string>
    <string name="payments_screen_current_label_pattern">Купить маршрут «%s»</string>
    <string name="payments_screen_current_amount_pattern">%1$s%2$s</string>
    <string name="payments_screen_both_label_pattern">Купить оба маршрута «%1$s» и «%2$s»</string>
    <string name="payments_screen_both_amount_pattern">%1$s%2$s</string>

    <string name="version_name_pattern">Версия приложения: %1$s</string>

    <string name="offer_screen_title">Оферта</string>

    <string name="tokenization_canceled">Не удается создать платеж, попробуйте снова позже</string>

    <string name="payment_success_title">Отлично!</string>
    <string name="payment_success_message">Оплата прошла успешно. Хорошего путешествия!</string>
    <string name="payment_success_positive_btn">Ок</string>

    <string name="payment_error_message">Что-то пошло не так…</string>
    <string name="payment_error_positive_btn">Ок</string>

    <string name="message_loading">Запрос выполняется…</string>

    <string name="dialog_location_permission_title">Дайте разрешение для использования геолокации</string>
    <string name="dialog_location_permission_content">Это требуется для отображения вашего местоположения на карте</string>
    <string name="dialog_location_permission_positive_btn">Хорошо</string>
    <string name="dialog_location_permission_negative_btn">Отмена</string>
    <string name="dialog_location_permission_to_settings_btn">В настройки</string>

    <string name="dialog_location_enable_title">Включите gps</string>
    <string name="dialog_location_enable_content">Это требуется для отображения вашего местоположения на карте</string>
    <string name="dialog_location_enable_positive_btn">Хорошо</string>
    <string name="dialog_location_enable_negative_btn">Отмена</string>

    // cancel errors
    <string name="cancel_error_undefined">Что-то пошло не так…</string>
    <string name="cancel_error_3d_secure_failed">Не пройдена аутентификация по 3-D Secure. При новой попытке оплаты Вам следует пройти аутентификацию, использовать другое платежное средство или обратиться ваш в банк за уточнениями.</string>
    <string name="cancel_error_call_issuer">Оплата данным платежным средством отклонена по неизвестным причинам. Вам следует обратиться в организацию, выпустившую платежное средство.</string>
    <string name="cancel_error_card_expired">Истек срок действия банковской карты. Вам следует использовать другое платежное средство.</string>
    <string name="cancel_error_country_forbidden">Нельзя заплатить банковской картой, выпущенной в этой стране. При новой попытке оплаты Вам следует использовать другое платежное средство.</string>
    <string name="cancel_error_fraud_suspected">Платеж заблокирован из-за подозрения в мошенничестве. При новой попытке оплаты Вам следует использовать другое платежное средство.</string>
    <string name="cancel_error_expired_on_confirmation">Истек срок оплаты: Вы не подтвердили платеж за время, отведенное на оплату выбранным способом.</string>
    <string name="cancel_error_insufficient_funds">Не хватает денег для оплаты. Вам следует пополнить баланс или использовать другое платежное средство.</string>
    <string name="cancel_error_internal_timeout">Технические неполадки: не удалось обработать запрос. Пожалуйста, попробуйте снова.</string>
    <string name="cancel_error_invalid_card_number">Неправильно указан номер карты. При новой попытке оплаты Вам следует ввести корректные данные.</string>
    <string name="cancel_error_invalid_csc">Неправильно указан код CVV2 (CVC2, CID). При новой попытке оплаты Вам следует ввести корректные данные.</string>
    <string name="cancel_error_issuer_unavailable">Организация, выпустившая платежное средство, недоступна. При новой попытке оплаты Вам следует использовать другое платежное средство или повторить оплату позже.</string>
    <string name="cancel_error_payment_method_limit_exceeded">Исчерпан лимит платежей для данного платежного средства или нашего магазина. При новой попытке оплаты Вам следует использовать другое платежное средство или повторить оплату на следующий день.</string>
    <string name="cancel_error_payment_method_restricted">Запрещены операции данным платежным средством (например, карта заблокирована из-за утери, кошелек — из-за взлома мошенниками). Вам следует обратиться в организацию, выпустившую платежное средство.</string>

    // failure errors
    <string name="failure_error_is_network_error">Проверьте настройки интернет - соединения и попробуйте снова.</string>
    <string name="failure_error_temporary_problem">Возникли технические неполадки с оплатой. Пожалуйста, попробуйте снова чуть позже.</string>
    <string name="failure_error_undefined_need_fix">Что-то пошло не так… Пожалуйста, сообщите нам о случившемся.</string>
    <string name="payment_variant_1_2_label">Купить все экскурсии Суздаля</string>

</resources>