<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:clickable="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="65dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/map_fragment"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/spb_road_pic" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/verticalGL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/distanceImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/map_fragment"
                app:srcCompat="@drawable/ic_distance" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/distanceLabel"
                style="@style/FontSemiBold.Dark16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_route_info_distance_label"
                app:layout_constraintBottom_toTopOf="@id/distanceValue"
                app:layout_constraintStart_toEndOf="@id/distanceImage"
                app:layout_constraintTop_toTopOf="@id/distanceImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/distanceValue"
                style="@style/FontRegular.Gray12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/distanceImage"
                app:layout_constraintStart_toStartOf="@id/distanceLabel"
                app:layout_constraintTop_toBottomOf="@id/distanceLabel"
                tools:text="4 км" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/durationImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/spacing_16"
                app:layout_constraintStart_toStartOf="@id/verticalGL"
                app:layout_constraintTop_toTopOf="@id/distanceImage"
                app:srcCompat="@drawable/ic_duration" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/durationLabel"
                style="@style/FontSemiBold.Dark16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_route_info_duration_label"
                app:layout_constraintBottom_toTopOf="@id/durationValue"
                app:layout_constraintStart_toEndOf="@id/durationImage"
                app:layout_constraintTop_toTopOf="@id/durationImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/durationValue"
                style="@style/FontRegular.Gray12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/durationImage"
                app:layout_constraintStart_toStartOf="@id/durationLabel"
                app:layout_constraintTop_toBottomOf="@id/durationLabel"
                tools:text="45 минут" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerHor1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_1"
                android:layout_marginTop="@dimen/spacing_6"
                android:backgroundTint="@color/color_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/distanceImage" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/travelModeImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerHor1"
                app:srcCompat="@drawable/ic_travel_mode" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/travelModeLabel"
                style="@style/FontSemiBold.Dark16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_route_info_travel_mode_label"
                app:layout_constraintBottom_toTopOf="@id/travelModeValue"
                app:layout_constraintStart_toEndOf="@id/travelModeImage"
                app:layout_constraintTop_toTopOf="@id/travelModeImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/travelModeValue"
                style="@style/FontRegular.Gray12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_route_info_travel_mode_value"
                app:layout_constraintBottom_toBottomOf="@id/travelModeImage"
                app:layout_constraintStart_toStartOf="@id/travelModeLabel"
                app:layout_constraintTop_toBottomOf="@id/travelModeLabel" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pointsImage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="@dimen/spacing_16"
                app:layout_constraintStart_toStartOf="@id/verticalGL"
                app:layout_constraintTop_toTopOf="@id/travelModeImage"
                app:srcCompat="@drawable/ic_points" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pointsLabel"
                style="@style/FontSemiBold.Dark16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_route_info_points_label"
                app:layout_constraintBottom_toTopOf="@id/pointsValue"
                app:layout_constraintStart_toEndOf="@id/pointsImage"
                app:layout_constraintTop_toTopOf="@id/pointsImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pointsValue"
                style="@style/FontRegular.Gray12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/pointsImage"
                app:layout_constraintStart_toStartOf="@id/pointsLabel"
                app:layout_constraintTop_toBottomOf="@id/pointsLabel"
                tools:text="19" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/dividerHor2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_1"
                android:layout_marginTop="@dimen/spacing_6"
                android:backgroundTint="@color/color_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/travelModeImage" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/photosLabel"
                style="@style/FontSemiBold.Dark20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:text="@string/fragment_route_info_photos_label"
                android:textColor="@color/main_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dividerHor2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/photosRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photosLabel"
                app:layout_constraintVertical_bias="0"
                tools:itemCount="4"
                tools:listitem="@layout/photo_item" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionLabel"
                style="@style/FontSemiBold.Dark20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:text="@string/fragment_route_info_description_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/photosRV" />

            <io.travel_tunes.utils.customViews.PlayerView
                android:id="@+id/playerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginEnd="@dimen/spacing_16"
                app:layout_constraintBottom_toBottomOf="@id/descriptionLabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/descriptionLabel"
                app:layout_constraintTop_toTopOf="@id/descriptionLabel" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/descriptionValue"
                style="@style/FontRegular.Dark16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_16"
                android:paddingBottom="@dimen/spacing_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descriptionLabel"
                tools:text="@tools:sample/lorem/random" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_16"
            android:backgroundTint="@color/main_blue"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/fragment_route_info_button_text"
            android:textAppearance="@style/FontRegular.Dark16"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tokenizeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_16"
            android:backgroundTint="@color/main_blue"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/fragment_route_info_button_pay"
            android:textAppearance="@style/FontRegular.Dark16"
            app:cornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>